# drydock

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  requirements.txt
.github/environments/disabled/: config.yml  requirements.txt
.github/environments/enabled/: config.yml
.github/environments/minio_enabled/: config.yml  requirements.txt
.github/workflows/: ci.yml  kubeconform-validation.yml  release.yml
changelog.d/: 20260407_125934_moises.gonzalez_remove_debug_pods.md  20260408_115227_moises.gonzalez_multiple_ingress_controller.md  20260416_094546_moises.gonzalez_remove_ingress_nginx_specific_features.md  20260416_131157_moises.gonzalez_update_naming.md
docs/decisions/: 001-Purpose.md
drydock/: __about__.py  hooks.py  plugin.py
drydock/manifest_builder/application/: manifest_builder.py
drydock/manifest_builder/domain/: config.py  manifest_repository.py
drydock/manifest_builder/infrastructure/: flex_tutor_manifest.py  tutor_based_manifests.py  tutor_config.py
drydock/patches/: caddyfile  caddyfile-cms  caddyfile-lms  cms-env  k8s-jobs  kustomization  kustomization-configmapgenerator  kustomization-patches  kustomization-resources  lms-env  openedx-common-settings  uwsgi-config
drydock/references/: kustomized_v13.yml  manifest_001.yml  tutor_v12.yml  tutor_v13.yml  tutor_v15.yml  tutor_v16.yml
drydock/templates/: README.md
drydock/templates/drydock/k8s/: celery-lms.yml  forum-overrides.yml  ingress.yml  jobs.yml  newrelic.ini  newrelic.yml  pdb.yml
drydock/templates/drydock/k8s/celery/: cms-worker.yml  lms-worker.yml
drydock/templates/drydock/k8s/debug/: deployments.yml  ingress.yml  services.yml
drydock/templates/drydock/k8s/drydock-jobs/: cms.yml  forum.yml  lms.yml  mfe.yml  minio.yml  mongodb.yml  mysql.yml  notes.yml
drydock/templates/drydock/k8s/graceful-uwsgi/: uwsgi-cms.yml
drydock/templates/drydock/k8s/hpa/: cms-worker.yml  cms.yml  hpa.yml  lms-worker.yml  lms.yml
drydock/templates/drydock/k8s/ingress/: cms.yml  extra-hosts.yml  issuer.yml  lms.yml  meilisearch.yml  mfe.yml  minio.yml  notes.yml  static-cache.yml
drydock/templates/drydock/k8s/lifecycle/: cms.yml  lms.yml
drydock/templates/drydock/k8s/migration-jobs/maple/: cms.yml  lms.yml
drydock/templates/drydock/k8s/migration-jobs/nutmeg/: lms.yml
drydock/templates/drydock/k8s/migration-jobs/olive/: lms.yml
drydock/templates/drydock/k8s/patches/: add-image-pull-secret-cronjob.yml  add-image-pull-secret.yml  async-forum-deployments.yml  databases-sync-wave.yml  debug-resources.yml  forum.yml  hpa-sync-wave.yml  hpa.yml  image-pull-secret.yml  mesh.yml  pdb.yml  post-init-deployments-sync-wave.yml  sync-wave-100.yml  sync-wave-4.yml  tls-volume-add.yml  tls-volume-append.yml  tutor-jobs.yml
drydock/templates/drydock/k8s/pdb/: openedx-pdb.yml
drydock/templates/drydock/k8s/resources/: limits.yml
drydock/templates/drydock/k8s/secrets/: image-pull-secret.yml
drydock/templates/drydock/k8s/sync-waves/: cms-worker.yml  cms.yml  forum.yml  lms-worker.yml  lms.yml
drydock/templates/drydock/k8s/upgrade-scripts/: cms.sh  lms.sh
drydock/templates/drydock/task/mongodb/: init
drydock/templates/kustomized/global-stack/: defaults.yml  kustomization.yml
drydock/templates/kustomized/tutor13/: defaults.yml  kustomization.yml
drydock/templates/kustomized/tutor13/base/: kustomization.yml
drydock/templates/kustomized/tutor13/base/k8s/: deployments.yml  drydock-jobs.yml  services.yml  volumes.yml
drydock/templates/kustomized/tutor13/base/k8s/drydock-jobs/: cms.yml  forum.yml  lms.yml  minio.yml  mysql.yml  notes.yml
drydock/templates/kustomized/tutor13/base/k8s/jobs/: forum.yml  lms.yml  mysql.yml
drydock/templates/kustomized/tutor13/extensions/: flowers.yml  hpa.yml  ingress.yml  kube-prometheus-stack.yml  kustomization.yml  overrides.yml
drydock/templates/kustomized/tutor13/extensions/debug/: deployments.yml  ingress.yml  services.yml
drydock/templates/kustomized/tutor13/extensions/drydock-jobs/: cms.yml  forum.yml  lms.yml  minio.yml  mysql.yml  notes.yml
drydock/templates/kustomized/tutor13/extensions/prometheus-stack/: kustomization.yml
drydock/templates/kustomized/tutor14/: defaults.yml  kustomization.yml
drydock/templates/kustomized/tutor14/base/: kustomization.yml
drydock/templates/kustomized/tutor14/base/k8s/: deployments.yml
drydock/templates/kustomized/tutor14/extensions/: hpa.yml  kustomization.yml  overrides.yml
drydock/templates/kustomized/tutor14/extensions/debug/: deployments.yml  ingress.yml  services.yml
drydock/templates/kustomized/tutor14/extensions/drydock-jobs/: cms.yml  lms.yml  minio.yml  mysql.yml  notes.yml
drydock/templates/kustomized/tutor15/base/k8s/: deployments.yml
drydock/templates/kustomized/tutor15/extensions/: hpa.yml  kustomization.yml  multipurpose-jobs.yml
drydock/templates/kustomized/tutor15/extensions/debug/: deployments.yml
drydock/templates/kustomized/tutor15/extensions/drydock-jobs/: extra-jobs.yml  forum.yml
drydock/templates/kustomized/tutor16/base/: kustomization.yml
drydock/templates/kustomized/tutor16/base/apps/openedx/: uwsgi.ini
drydock/templates/kustomized/tutor16/base/apps/openedx/settings/partials/: common_all.py
drydock/templates/kustomized/tutor16/base/k8s/: namespace.yml  volumes.yml
drydock/templates/kustomized/tutor16/extensions/: newrelic.ini  overrides.yml
drydock/templates/kustomized/tutor16/extensions/debug/: deployments.yml  ingress.yml  services.yml
drydock/templates/kustomized/tutor16/extensions/drydock-jobs/: cms.yml  lms.yml
drydock/templates/manifest_builder/manifest_001/k8s/: other_file.yml
drydock/templates/tutor/v13/k8s/: volumes.yml
drydock_backups/: Dockerfile  README.rst  docker-entrypoint.sh  plugin.py
drydock_backups/patches/: drydock-multipurpose-jobs
drydock_backups/utils/s3_backups_expiration/: main.tf
tutor_plugin/: plugin.py
tutor_plugin/templates/drydock/manifest_001/: kustomization.yml
