[project]
name = "tutor-contrib-drydock"
version = "20.1.1"
description = "A Tutor plugin to manage our opinionated Open edX operations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "eduNEXT" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tutor~=20.0"
]

[project.urls]
Homepage = "https://github.com/edunext/drydock"
Code = "https://github.com/edunext/drydock"
"Issue tracker" = "https://github.com/edunext/drydock/issues"

[project.entry-points."tutor.plugin.v1"]
drydock = "drydock.plugin"

[tool.wheel]
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "drydock"

[tool.uv.sources]
tutor-contrib-s3 = { git = "https://github.com/hastexo/tutor-contrib-s3" }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]
test = [
    "tutor-contrib-s3",
    "tutor-forum~=20.0",
    "tutor-mfe~=20.0",
    "tutor-minio~=20.0",
    "tutor-notes~=20.0",
]

