[project]
name = "tutor-contrib-drydock"
version = "22.0.0"
description = "A Tutor plugin to manage our opinionated Open edX operations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "eduNEXT" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tutor @ git+https://github.com/overhangio/tutor@59264ca9f9c6a8e67622ae72080684ffc6ec7e2a"
]

[project.urls]
Homepage = "https://github.com/edunext/drydock"
Code = "https://github.com/edunext/drydock"
"Issue tracker" = "https://github.com/edunext/drydock/issues"

[project.entry-points."tutor.plugin.v1"]
drydock = "drydock.plugin"

[tool.wheel]
universal = true

[tool.ruff]
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "drydock"

[tool.uv.sources]
tutor-contrib-s3 = { git = "https://github.com/eduNEXT/tutor-contrib-s3",  tag = "5dc1c06d96b337109f7ca96eda41529a7f22e0e0" }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]
test = [
    "tutor-contrib-s3 @ git+https://github.com/eduNEXT/tutor-contrib-s3@5dc1c06d96b337109f7ca96eda41529a7f22e0e0",
    "tutor-mfe @ git+https://github.com/overhangio/tutor-mfe@d0804c2590431780d3a0ed6d24701c20eef5a86d",
    "tutor-minio @ git+https://github.com/overhangio/tutor-minio@b05d1f37875789ec6abe9641a05fda1139fd45ed",
    "tutor-notes @ git+https://github.com/overhangio/tutor-notes@2cfe80f82dde6e794782d0484a7b1bf6af9296f2",
    "tutor-forum @ git+https://github.com/overhangio/tutor-forum@3ecb05cc6aa525554995d37be1077c53d7833ac4",
]

